# docker-cryptodip-bot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TESTING.md  TODO.md  docker-compose.yml  pyproject.toml  test-compose.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  security-issue.md
.github/workflows/: main.yml  merge.yml  tag.yml
SourceCode/: bot_alerts.py  bot_internals.py  bot_math.py  coinbase_pro.py  cryptodip_bot.py  gemini_exchange.py  mongo.py
config/: .gitignore
